# ansible_apply_role

./: .gitlab-ci.yml  README.md  ansible_apply_role.py  pyproject.toml
